2001-02-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.h, imagewin/imagewin.h, usecode/intrinsics.cc: fixed warnings
	* cheat_screen.cc: include config.h
	* NEWS: fixed typos
	* gamewin.h: added a check for NULL shape data. (avoids sword crash)
	* txtscroll.cc: fixed unresponsiveness

2001-02-12  Ryan Nunn <triforce@merlin.net.au>
	* makefile.* : cheat_screen.cc
	* NEWS, exult.cc, imagewin/*.* : Multiple Scalers.
	* actors*.* : Polymorph debugging, Schedules Changing, Pick pocket
	* NEWS, cheat.*, key*.*, data/defaultkeys.txt : New cheats (cheat
	  screen, pick pocket, grab npc, npc number)
	* cheat_screen.* : Cheat screen for advanced options. Includes NPC
	  schedules changes, flag modifying, info, time rate/set. 
	* fnames.cc, gamedat.cc, readnpc.cc : Schedule.dat in GAMEDAT dir
	* gameclk.cc : Schedules in SI always search back
	* gamewin.* : SI Schedule
	* schedule.* : Writing and modifying Schedule_change objects
	* gumps/paperdoll_gump*.* : Bug fixes
	* objs/iregobjs.cc : So grab npc wont cause problems if NPC removed
	* usecode/*.* : More SI Intrinsic work

2001-02-11  Tristan Tarrant  <nadir@users.sourceforge.net>
	* data/black_gate.shp, data/serpent_isle.shp: updated menu entries 
	  like someone requested a loooong time ago
	* exultmenu.cc: updated for above

2001-02-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* browser.cc, soundtest.cc: you can now take screenshots in the shape browser and sound tester

2001-02-10  Christoph Reichenbach  <jameson@linuxgames.com>
	* alpha_kludges.h: Added clog to the std:: namespace
	* usecode/compiler/ucsym.cc: Explicitly specified String_compare in
	  template; fixes cxx (also in my version of 0.91Alpha2)

2001-02-09  Max Horn  <max@quendi.de>
	* keys.cc: fixed bug in KeyBinder::ParseText on MacOS; changed some cerr to clog

2001-02-09  Max Horn  <max@quendi.de>
	* shapes/ vgafile.cc: fixed bad bug, shape_source was never inited
	   to 0, this could cause bad crashs in the destructor if load was